tests/invalid/magicbox.err_exp
magicbox.m:036: In `arguments_handler(di, uo, out)':
magicbox.m:036:   error: determinism declaration not satisfied.
magicbox.m:036:   Declared `cc_multi', inferred `cc_nondet'.
magicbox.m:055:   call to `to_int(in, out)' can fail.
magicbox.m:062:   call to `to_int(in, out)' can fail.
For more information, try recompiling with `-E'.
